<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">qso-again</string>
    <string name="app_title">qso-again</string>
    <string name="app_subtitle">Timeshift audio replay</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="record">Record</string>
    <string name="stop_playback">Stop</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="recording">Recording…</string>
    <string name="not_recording">Not recording</string>
    <string name="no_recording">No recording</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="saved_toast">Saved to Downloads</string>
    <string name="playback_started">Playback started</string>
    <string name="permission_required">Microphone permission required</string>
    <string name="max_duration">Max recording duration</string>
    <string name="recording_in_progress">Recording in progress</string>
    <string name="speed">Speed</string>
    <string name="speed_default">default</string>
    <string name="recording_settings">Recording Settings</string>
    <string name="about">About</string>
    <string name="about_app">About qso-again</string>
    <string name="thomas_osterried_dl9sau">Thomas Osterried, DL9SAU</string>
    <string name="gpl_v3">GPL v3</string>
    <string name="copyright_2026">Copyright 2026 Thomas Osterried, DL9SAU</string>
    <string name="opencode">opencode</string>
    <string name="playback_position">Playback position</string>
    <string name="seek_back_label">Play back (see button) to end</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="recent_recordings">Recent recordings</string>
    <string name="quit_title">Quit</string>
    <string name="quit_message">Do you want to quit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="language">Language</string>
    <string name="language_system">System default</string>
    <string name="language_german">German</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_spanish">Spanish</string>
    <string name="copyright">Copyright</string>
    <string name="author">Author</string>
    <string name="license">License</string>
    <string name="build_date">Build date</string>
    <string name="created_with">Created with</string>
    <string name="sample_rate">Sample rate (Hz)</string>
    <string name="bit_depth">Bit depth</string>
    <string name="memory_usage">Memory (RAM)</string>
    <string name="auto_save">Auto-save when full (max duration or RAM)</string>
    <string name="audio_memory_consumption">Audio Memory consumption (RAM / File):\n%1$s</string>
    <string name="seek_beginning">Beginning</string>
    <!-- Button content descriptions for accessibility -->
    <string name="desc_start_stop_recording">Start or stop recording</string>
    <string name="desc_play_recording">Play or stop playback</string>
    <string name="desc_save_recording">Save current recording</string>
    <string name="desc_decrease_playback_speed">Decrease playback speed</string>
    <string name="desc_reset_playback_speed">Reset playback speed to default</string>
    <string name="desc_increase_playback_speed">Increase playback speed</string>
    <string name="desc_seek_back_0s">Seek back to end</string>
    <string name="desc_seek_back_2s">Seek back 2 seconds</string>
    <string name="desc_seek_back_5s">Seek back 5 seconds</string>
    <string name="desc_seek_back_10s">Seek back 10 seconds</string>
    <string name="desc_seek_back_20s">Seek back 20 seconds</string>
    <string name="desc_seek_back_30s">Seek back 30 seconds</string>
    <string name="desc_seek_back_1min">Seek back 1 minute</string>
    <string name="desc_seek_back_2min">Seek back 2 minutes</string>
    <string name="desc_seek_back_5min">Seek back 5 minutes</string>
    <string name="desc_seek_back_10min">Seek back 10 minutes</string>
    <string name="desc_seek_back_30min">Seek back 30 minutes</string>
    <string name="desc_seek_back_60min">Seek back 60 minutes</string>
    <string name="desc_seek_beginning">Seek to beginning</string>
</resources>