<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <ListPreference
            app:key="sample_rate"
            app:title="@string/sample_rate"
            app:defaultValue="22050"
            app:entries="@array/sample_rate_entries"
            app:entryValues="@array/sample_rate_values"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="bit_depth"
            app:title="@string/bit_depth"
            app:defaultValue="16"
            app:entries="@array/bit_depth_entries"
            app:entryValues="@array/bit_depth_values"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:key="memory_usage"
            android:title="@string/memory_usage"
            android:selectable="false"
            app:singleLineTitle="false" />
        <ListPreference
            app:key="language"
            app:title="@string/language"
            app:defaultValue="system"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/about_app"
        app:layout="@layout/preference_category_left">
        <Preference
            android:key="version"
            android:title="Version"
            android:summary="1.011" />
        <Preference
            android:key="build_date"
            android:title="@string/build_date"
            android:summary="2026-04-28" />
        <Preference
            android:key="author"
            android:title="@string/author"
            android:summary="@string/thomas_osterried_dl9sau" />
        <Preference
            android:key="license"
            android:title="@string/license"
            android:summary="@string/gpl_v3" />
        <Preference
            android:key="copyright"
            android:title="@string/copyright"
            android:summary="@string/copyright_2026" />
        <Preference
            android:key="created_with"
            android:title="@string/created_with"
            android:summary="OpenCode (big-pickle / mistral)" />
    </PreferenceCategory>
</PreferenceScreen>
